--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.0",
-    "nodemon": "^3.1.4"
+    "imagekitio-react": "^4.2.0",
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
   }
 }
